--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <img src="./images/client-maker.svg" alt="">
         </div>
       </div>
-      <div class="col-lg-4" >
+      <div class="col-lg-4" style="background-color: yellow;">
         <img src="./images/image-hero-desktop.png" style="width: 100%;height: 100%;" alt="">
       </div>
 
